I created my about me page

--- a/about.html
+++ b/about.html
@@ -14,24 +14,35 @@
 <body>
     <div class="container">
         <header>
-            <img src="./images/download__2_-removebg-preview.png" class="logoimg" alt="logo">
+            <a href="index.html"><img src="./images/download__2_-removebg-preview.png" class="logoimg" alt="logo"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About Me</a>
                 <a href="portfolio.html">Portfrlio</a>
                 <a href="contact.html">Contact</a>
-                <button class="letstalkbtn">Lets Talk</button>
-            </nav>
+                <a href="contact.html"><button class="letstalkbtn">Lets Talk</button></a>            </nav>
         </header>
- <main>
-        <div class="aboutme">
-                 <div class="aboutcircle"> /<div>
-   <h1>About Me</h1>
-        </div>
+        <main>
+            <div class="aboutmecontainer">
+            <h1>About Me</h1>
+            <label>Email</label>
+            <p>teekaamichaele@gmail.com</p>
+            <label>Role</label>
+            <p>Web Dev</p>
+            <label>Phone</label>
+            <p>(+234) 9158433291</p>
+            <button>Download Cv</button>
 
-    </main>
+            </div>
+            <div class="aboutcircle">
+
+            </div>
+        </main>
+        
+</aside>
+        
     </div>
-   
+
 
 
 </body>
