--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 <body>
     <div class="container">
         <header>
-            <img src="./images/download__2_-removebg-preview.png" class="logoimg" alt="logo">
+            <a href="index.html"><img src="./images/download__2_-removebg-preview.png" class="logoimg" alt="logo"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About Me</a>
                 <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
-                <button class="letstalkbtn">Lets Talk</button>
+                <a href="contact.html"><button class="letstalkbtn">Lets Talk</button></a>
+                
             </nav>
         </header>
 
@@ -40,7 +41,8 @@
         </main>
         <footer>
             <!-- add icons here -->
-            <button class="seemyworksbtn">See My Works</button>
+            <a href="portfolio.html"><button class="seemyworksbtn">See My Works</button></a>
+         
         </footer>
     </div>
 
