--- a/portfolio.html
+++ b/portfolio.html
@@ -14,12 +14,11 @@
 <body>
     <div class="container">
         <header>
-            <img src="./images/download__2_-removebg-preview.png" class="logoimg" alt="logo">
+            <a href="index.html"> <img src="./images/download__2_-removebg-preview.png" class="logoimg" alt="logo"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About Me</a>
                 <a href="portfolio.html">Portfrlio</a>
                 <a href="contact.html">Contact</a>
-                <button class="letstalkbtn">Lets Talk</button>
-            </nav>
+                <a href="contact.html"><button class="letstalkbtn">Lets Talk</button></a>            </nav>
         </header>
