--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
 
             </div>
             <div class="aboutcircle">
+                <img src="./images/WhatsApp Image 2023-07-23 at 11.49.17 PM.jpeg" alt="">
 
             </div>
         </main>
