--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About Me</a>
-                <a href="portfolio.html">Portfrlio</a>
+                <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
                 <a href="contact.html"><button class="letstalkbtn">Lets Talk</button></a>            </nav>
         </header>
