--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Css Reset -->
     <link rel="stylesheet" href="./styles/cssreset-meyers.css">
+    <script src="https://kit.fontawesome.com/813b700df1.js" crossorigin="anonymous"></script>
+
     <!-- Css Style -->
     <link rel="stylesheet" href="./styles/style.css">
     <title>About Me</title>
@@ -15,23 +17,27 @@
     <div class="container">
         <header>
             <a href="index.html"><img src="./images/download__2_-removebg-preview.png" class="logoimg" alt="logo"></a>
-            <nav>
+
+            <nav class="bar_nav">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Me</a>
                 <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
-                <a href="contact.html"><button class="letstalkbtn">Lets Talk</button></a>            </nav>
+                <a href="contact.html"><button class="letstalkbtn">Lets Talk</button></a>
+            </nav>
+            <i class="fa fa-bars bar_menu" aria-hidden="true"></i>
+
         </header>
         <main>
             <div class="aboutmecontainer">
-            <h1>About Me</h1>
-            <label>Email</label>
-            <p>teekaamichaele@gmail.com</p>
-            <label>Role</label>
-            <p>Web Dev</p>
-            <label>Phone</label>
-            <p>(+234) 9158433291</p>
-            <button>Download Cv</button>
+                <h1>About Me</h1>
+                <label>Email</label>
+                <p>teekaamichaele@gmail.com</p>
+                <label>Role</label>
+                <p>Web Dev</p>
+                <label>Phone</label>
+                <p>(+234) 9158433291</p>
+                <button>Download Cv</button>
 
             </div>
             <div class="aboutcircle">
@@ -39,10 +45,14 @@
 
             </div>
         </main>
-        
-</aside>
-        
+
+
+
     </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
+        integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
+    <script src="/toggle.js"></script>
+
 
 
 
