--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- css reset -->
     <link rel="stylesheet" href="./styles/cssreset-meyers.css">
     <!-- css stylesheet -->
+    <script src="https://kit.fontawesome.com/813b700df1.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="./styles/style.css">
     <title>Portforlio Home Page</title>
 </head>
@@ -15,7 +17,9 @@
     <div class="container">
         <header>
             <a href="index.html"><img src="./images/download__2_-removebg-preview.png" class="logoimg" alt="logo"></a>
-            <nav>
+
+            <nav class="bar_nav">
+
                 <a href="index.html">Home</a>
                 <a href="about.html">About Me</a>
                 <a href="portfolio.html">Portfolio</a>
@@ -23,6 +27,8 @@
                 <a href="contact.html"><button class="letstalkbtn">Lets Talk</button></a>
                 
             </nav>
+            <i class="fa fa-bars bar_menu" aria-hidden="true"></i>
+
         </header>
 
         <main>
@@ -40,11 +46,13 @@
 
         </main>
         <footer>
-            <!-- add icons here -->
             <a href="portfolio.html"><button class="seemyworksbtn">See My Works</button></a>
          
         </footer>
     </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
+    integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
+    <script src="/toggle.js"></script>
 
 </body>
 
