--- a/contact.html
+++ b/contact.html
@@ -6,19 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css reset -->
     <link rel="stylesheet" href="./styles/cssreset-meyers.css">
+    <script src="https://kit.fontawesome.com/813b700df1.js" crossorigin="anonymous"></script>
+
     <!-- css stylesheet -->
     <link rel="stylesheet" href="./styles/style.css">
     <title>Contact Page</title>
 </head>
 
 <body>
-    <div class="container">
+      <div class="container">
         <header>
             <a href="index.html"> <img src="./images/download__2_-removebg-preview.png" class="logoimg" alt="logo"></a>
-            <nav>
+
+            <nav class="bar_nav">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Me</a>
                 <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
-                <a href="contact.html"><button class="letstalkbtn">Lets Talk</button></a>            </nav>
+                <a href="contact.html"><button class="letstalkbtn">Lets Talk</button></a>
+            </nav>
+            <i class="fa fa-bars bar_menu" aria-hidden="true"></i>
+
         </header>
+        <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
+        integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
+        <script src="/toggle.js"></script>
+    
+</body>
+  
